<resources>
    <string name="app_name">My IMC</string>
    <string name="imc_network">IMC Network</string>
    <string name="plesae_try_again">Problem loading data, please try again</string>
    <string name="channel_name" translatable="false">imc channel</string>
    <string name="version" translatable="false">Version 2.0.1</string>
    <string name="facebook_app_id" translatable="false">2287078814932300</string>
    <string name="app_flyer_dev_key" translatable="false">RZJpUoVLUtnp3atnSg65NP</string>
    <string name="please_wait">Please wait...</string>
    <string name="available">Available</string>
    <string name="reserved">Reserved</string>
    <string name="welcome_text">Welcome to \nInternational Medical Center</string>
    <string name="welcome_text_FC">Welcome to \nThe First Clinic</string>
    <string name="sign_in">Sign In</string>
    <string name="register_now">Register Now</string>
    <string name="request_appointment">Request an Appointment</string>
    <string name="have_ques">Have any Questions? Call or email us</string>
    <string name="des_signin">Patient Login</string>
    <string name="select_id">Login Id</string>
    <string name="mrn">MR Number</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="or_s">or</string>
    <string name="or_line">-- OR --</string>
    <string name="done">Done</string>
    <string name="login_id_hint">National/Iqama/Passport/Birth Not. ID</string>
    <string name="national_id_names">National/ Iqama No / Passport No</string>
    <string name="remember_me">Remember me</string>
    <string name="appointment_as_guest">Schedule an appointment as a guest</string>
    <string name="verify_number">Verifying your number!</string>
    <string name="otp_sent">We have sent an OTP on your number\n%1$s</string>
    <string name="enter_for_digit">Enter Four 4 Digit OTP</string>
    <string name="resend">Resend OTP?</string>
    <string name="guest_user">Guest User</string>
    <string name="register_number">Register your mobile number</string>
    <string name="reg_content">We will send you an OTP to \n authenticate your account</string>
    <string name="country_code">Country code</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="submit">Submit</string>
    <string name="emergency_contact">Emergency Contact Details (different from registrant)</string>
    <string name="welcome">Welcome!</string>
    <string name="contine_send_otp">Continue and Send OTP</string>
    <string name="introduce">Open File Application</string>
    <string name="id_type">ID Type (National ID / Iqama / Passport / Birth Notification)*</string>
    <string name="upload">Upload</string>
    <string name="first_name">First Name *</string>
    <string name="family_name">Family Name *</string>
    <string name="agree_to_policy"><![CDATA[I agree to <u><a href="https://www.imc.med.sa/en/terms-and-conditions" style="color:black"> Terms of Use</a></u>
    and <u><a href="https://www.imc.med.sa/en/social-media-policy" style="color:black">Privacy policy</a> </u>]]></string>
    <string name="note_signup"><b>Note: </b>IMC will not be liable in case information is not correctly provided by the patient.</string>
    <string name="certify_cobtent">I certify that I read the Consent for General Treatment and I certify that I will need to fill out and sign the consent upon arrival at the hospital. I hereby give consent to IMC to provide treatment for myself, my dependant or my relative and I have the legal right to sign for the patient being registered.</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="self">Self</string>
    <string name="legal_gurdian">Legal Gurdian</string>
    <string name="relative">Relative</string>
    <string name="submitter_invalid">Name must be between 10 and 70</string>
    <string name="upload_id_card">Add scanned copy of ID card (National/Iqama/Passport Number) *</string>
    <string name="do_you_valid_isurance">Do you have a valid insurance? *</string>
    <string name="insurance_compnay">Insurance Company *</string>
    <string name="policy_number">Policy Number</string>
    <string name="membership_id">Insurance Membership ID</string>
    <string name="submitter_name">Name of the Submitter *</string>
    <string name="relation_to_patiet">Relation to Patient *</string>
    <string name="insurance_expiry_date">Insurance Expiry Date</string>
    <string name="class_plan">Class/Plan</string>
    <string name="attach_insuarnce_card">Attach Insurance Card</string>
    <string name="introduce_page_two">Please enter your ID copy and Insurance details</string>
    <string name="home_tel">Home Phone Number *</string>
    <string name="abort">Abort</string>
    <string name="abort_mesgae">Do you want to abort signup?</string>
    <string name="attach_id_card">Please attach ID card scanned copy</string>
    <string name="select_insurance_company">Please select insurance company</string>
    <string name="max_file_size">File size should not greater than 1.5MB</string>
    <string name="note_max_file_size">(Note: File size should not be greater than 1.5MB.)</string>
    <string name="select_id_expiry_date">Please select ID expiry date</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_">Phone Number *</string>
    <string name="phone_number_cell">Cell Phone Number *</string>
    <string name="phone_validation_note">(Please enter a valid number, an OTP will be sent to the number you provide to verify.)</string>
    <string name="address">Address</string>
    <string name="address_c">Address:</string>
    <string name="address_en">Address in English</string>
    <string name="address_ar">Address in Arabic</string>
    <string name="nationality">Nationality</string>
    <string name="nationality_req">Nationality *</string>
    <string name="appointment">Appointment</string>
    <string name="home">Home</string>
    <string name="records">Records</string>
    <string name="chatbot">Chatbot</string>
    <string name="profile">Profile</string>
    <string name="are_sure_logout">You will no longer receive appointment reminders and other notifications on this device.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dashboard_menu">Dashboard</string>
    <string name="documents_menu">Documents</string>
    <string name="medical_cards_menu">Medical Cards</string>
    <string name="add_guardian_menu">Add Guardian</string>
    <string name="settings_menu">Settings</string>
    <string name="about_us_menu">About Us</string>
    <string name="help_menu">Help</string>
    <string name="logout_menu">Logout</string>
    <string name="general">General</string>
    <string name="next_appointment">Your Next Appointment</string>
    <string name="reports">Reports</string>
    <string name="specialities">Specialities</string>
    <string name="manage_bookings">Manage Appointments</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="manage_appointment">Manage Appointment</string>
    <string name="view_booking">View your appointment history</string>
    <string name="medication_prescription">Prescriptions/Medications</string>
    <string name="prescription">Prescriptions</string>
    <string name="prescription_">Prescription</string>
    <string name="view_medication_pres">View your prescriptions/medications</string>
    <string name="download_prescription">Your prescription downloaded successfully.</string>
    <string name="view_perscription">View Prescription</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="buy">Buy</string>
    <string name="medication">Medications</string>
    <string name="medication_">Medication</string>
    <string name="symtom_tracker">Symptom Checker</string>
    <string name="view_symtom_tracker">Find a possible diagnosis by choosing a symptom and answering a few simple questions.</string>
    <string name="sick_leave_report">Sick Leave Reports</string>
    <string name="lab_reports">Lab Reports</string>
    <string name="lab_report">Lab Report</string>
    <string name="view_lab_reports">View current and past reports</string>
    <string name="view_lab_reports1">View current appointment test results</string>
    <string name="title_camera_and_storage_access">We need this permission to download report file on your device.</string>
    <string name="permission_title">“My IMC“ app would like to access Storage on your device</string>
    <string name="open_settings">Open Settings</string>
    <string name="operative_reports">Operative Reports</string>
    <string name="operative_report">Operative Report</string>
    <string name="discharge_reports">Discharge Reports</string>
    <string name="discharge_report">Discharge Report</string>
    <string name="cardio_reports">Cardiology Reports</string>
    <string name="cardio_report">Cardiology Report</string>
    <string name="filter_by_exam">Filter by exam date</string>
    <string name="operative_reports_total">Total Reports: </string>
    <string name="discharge_reports_total">Total Reports: </string>
    <string name="cardio_reports_total">Total Reports: </string>
    <string name="view_current_past_reports">View current and past reports</string>
    <string name="next_available_time">Earliest Appointment:</string>
    <string name="radiology_reports">Radiology Reports</string>
    <string name="radiology_report">Radiology Report</string>
    <string name="view_radiology_reports">View current and past test results</string>
    <string name="find_a_doctor">Find a doctor</string>
    <string name="view_find_a_doctor">Learn more about our physicians</string>
    <string name="view_specilaities">Explore our medical &amp; surgical services</string>
    <string name="way_finder">Way Finder</string>
    <string name="view_way_finder">Tap here for driving directions</string>
    <string name="health_ques">Health questionnaires</string>
    <string name="view_health_ques">View your health questionnaires in one place</string>
    <string name="tap_here_complete_form">Tap here to Complete our form</string>
    <string name="have_ques_con">Have any Questions? Call or email us</string>
    <string name="contact_us">Contact Us</string>
    <string name="health_byte">Health Bytes</string>
    <string name="health_tips">Health Tips</string>
    <string name="departments">Departments</string>
    <string name="mayo_clinic">Mayo Clinic</string>
    <string name="wellness">Wellness</string>
    <string name="health_byte_content">Discover our health and wellness blog</string>
    <string name="institutes_spec_view">Explore our medical &amp; surgical services</string>
    <string name="retail">Retail &amp; Facilities</string>
    <string name="view_retail">Explore our services</string>
    <string name="location_map">Location Map</string>
    <string name="location_map_view">Tap here for driving directions</string>
    <string name="select_time_slot">Select Time Slot</string>
    <string name="new_appointment_doctor">New Appointment - %1$s</string>
    <string name="how_you_want_booking">How would you like to have the appointment</string>
    <string name="new_">New</string>
    <string name="next">Next</string>
    <string name="book_appointment">Request an Appointment</string>
    <string name="view_alternate_phyisician">Available Doctors for Selected Date</string>
    <string name="in_person">In Person</string>
    <string name="tele_med">TeleMedicine</string>
    <string name="thank_content">Thank you, you have finished the assessment. To see your result please click below link:</string>
    <string name="view_my_report">View My Report</string>
    <string name="assessment_result">Assessment Result</string>
    <string name="no_time_slot">No Time Slot Available</string>
</resources>