<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_bg_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <RelativeLayout
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_3sdp"
            android:paddingEnd="@dimen/_3sdp"
            android:theme="@style/AppTheme.AppBarOverlay">

            <ImageView
                android:visibility="visible"
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back_blue" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/assessment_result"
                android:textColor="#005497"
                android:textSize="@dimen/text_size_big"
                android:visibility="visible" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/main_toolbar">

            <RelativeLayout
                android:id="@+id/main_iew"
                android:visibility="visible"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:gravity="center"
                    android:text="@string/thank_content"
                    android:id="@+id/label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textColor="#005a9c"
                    android:textSize="@dimen/text_size_big"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/lay_bt"
                    android:gravity="center"
                    android:weightSum="3"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/label">


                    <LinearLayout
                        android:visibility="visible"
                        android:id="@+id/lay_btn_view_report"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_request_appointment"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_my_report"
                            android:textColor="@color/button_click_text_white_blue"
                            android:textSize="@dimen/text_size_normal" />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</RelativeLayout>
